added files to gitignore, modified rafi's file to include a 'main' for the merging of 2 files, updated his readme. hiiiii

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,21 @@ PKG-INFO
 README.txt
 docs
 examples/
-mechanize mechanize.egg-info
 out
 mechanize*
 MANIFEST.in
 ez_setup.py
 setup.cfg
-test-tools/
 test.py
 test
 release.py
 setup.py
+
+out2
+out3
+out4
+rawr
+rawr.bak
+wheeout
+keep
+test-*
